# Form-Validation

./: .gitignore  Makefile  README.md  form_validation_docs.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
.gitHub/workflows/: ci.yml
.github/workflows/: ci.yml
Schema/: README.md  address.schema.json  file-upload.schema.json  formset.schema.json  index.schema.json  payment.schema.json  signup.schema.json  survey.schema.json  validation-log.schema.json  wizard-step-1.schema.json  wizard-step-2.schema.json  wizard-step-3.schema.json
apps/forms_lab/: __init__.py  apps.py  context_processors.py  field_validation.py  fields.py  middleware.py  mixins.py  models.py  results.py  services.py  urls.py  views.py
apps/forms_lab/forms/: __init__.py  address.py  file_upload.py  formset.py  payment.py  signup.py  survey.py  wizard.py
apps/forms_lab/migrations/: 0001_initial.py
apps/forms_lab/templatetags/: form_extras.py
apps/forms_lab/tests/: conftest.py  e2e_helpers.py  test_e2e_demos.py  test_e2e_formset.py  test_e2e_signup.py  test_e2e_submit_paths.py  test_field_validation.py  test_field_validation_extended.py  test_fields_and_forms.py  (+14 more)
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  ci.py  dev.py  prod.py
docs/: architecture.md
docs/adr/: 0001-validator-registry.md  0002-validation-layers.md  0003-validation-result.md  0004-antispam.md  0005-function-vs-class-validators.md  0006-custom-fields.md  0007-single-field-vs-full-form-validation.md
scripts/: copy-vendor-js.mjs
static/css/: forms_lab.css
static/js/: forms_lab.js
static/src/: forms_lab.input.css
templates/: base.html
templates/forms/: _field.html
templates/forms_lab/: form_detail.html  index.html  reference.html  stats.html
(+21 files in other folders)
