[project]
name = "form-validation-lab"
version = "1.0.0"
description = "Django 5 layered form validation showcase with HTMX partials and validator registry"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "Django>=5.1,<6.0",
    "django-htmx>=1.21,<2.0",
    "django-environ>=0.11,<1.0",
    "phonenumbers>=8.13,<9.0",
    "python-magic>=0.4.27,<0.5",
    "Pillow>=10.4,<12.0",
    "psycopg[binary]>=3.2,<4.0",
    "whitenoise>=6.7,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "pytest-cov>=5.0,<7.0",
    "coverage>=7.6,<8.0",
    "hypothesis>=6.120,<7.0",
    "playwright>=1.49,<2.0",
    "pytest-playwright>=0.5,<0.7",
    "ruff>=0.8,<0.10",
    "black>=24.10,<26.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["apps", "config"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "DJ"]
ignore = ["DJ001", "DJ008"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["test_*.py", "*_tests.py"]
testpaths = ["apps/forms_lab/tests"]
addopts = [
    "--strict-markers",
    "-m",
    "not e2e",
    "--cov=apps.forms_lab",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]
markers = [
    "e2e: browser tests (Playwright; excluded from default pytest; run in CI and via make test-e2e)",
]

[tool.coverage.run]
branch = true
source = ["apps/forms_lab"]

[tool.coverage.report]
omit = [
    "*/tests/*",
    "*/migrations/*",
]
